--- a/index.html
+++ b/index.html
@@ -3,26 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WEEKS</title>
+    <title>Красивый Сайт со Ссылками</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <!-- Подключение Font Awesome для иконок -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
     <header>
         <div class="container">
-            <h1>Weeks </h1>
-            <p>Сайт YouTube канала Weeks</p>
+            <h1>Мой Лендинг</h1>
+            <p>Сайт со ссылками на любимые ресурсы</p>
         </div>
     </header>
 
     <main>
-        <section class="links-buttons">
+         <section class="links-panel">
             <div class="container">
-                <div class="button-grid">
-                    <a href="https://vk.com/xdanil23" class="button" target="_blank">VK</a>
-                    <a href="https://discord.gg/T4FUrrWaDj" class="button" target="_blank">Discord</a>
-                    <a href="https://www.youtube.com/@mr.weeks95/videos" class="button" target="_blank">YouTube</a>
-                    <a href="http://t.me/danyl2595" class="button" target="_blank">Telegram</a>
+                <div class="panel">
+                    <a href="https://www.youtube.com/@mr.weeks95" class="panel-item youtube" target="_blank">
+                    <i class="fab fa-youtube"></i><span>Weeks</span>
+                     </a>
+                     <a href="http://t.me/danyl2595" class="panel-item telegram" target="_blank">
+                         <i class="fab fa-telegram-plane"></i><span>ПОДВАЛ ДАНУЛА</span>
+                     </a>
+                     <a href="https://discord.com" class="panel-item discord" target="_blank">
+                        <i class="fab fa-discord"></i><span>ПОДВАЛ ДАНУЛА</span>
+                   </a>
+                    <a href="https://vk.com/xdanil23" class="panel-item vk" target="_blank">
+                    <i class="fab fa-vk"></i><span>WEEKS</span>
+                    </a>
                 </div>
             </div>
         </section>
@@ -32,13 +42,13 @@
                 <h2>Последнии ролики</h2>
                 <div class="image-grid">
                      <a href="https://youtu.be/opLuIbIC1-0?si=2tFiVVqvRBwnPJWP" class="image-link" target="_blank">
-                        <img src="RKN_Bloced_Anime.png" alt="" class="image">
+                        <img src="img/RKN_Bloced_Anime.png" alt="" class="image">
                     </a>
                     <a href="https://youtu.be/yEPvqyQTKhQ?si=38XWvX3lcspIJcuW" class="image-link" target="_blank">
-                         <img src="RKN_XZ.png" alt="" class="image">
+                         <img src="img/RKN_XZ.png" alt="" class="image">
                     </a>
                      <a href="https://youtu.be/28S_bVmm4v4?si=YVVkCZTD1aKJdAvJ" class="image-link" target="_blank">
-                        <img src="School_History.png" alt="" class="image">
+                        <img src="img/School_History.png" alt="" class="image">
                     </a>
                 </div>
             </div>
@@ -47,7 +57,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2023 - 2024 Weeks Chanel</p>
+            <p>&copy; 2019 - 2024 Weeks Chanel</p>
         </div>
     </footer>
 
