--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Красивый Сайт со Ссылками</title>
+    <title>WEEKS</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <!-- Подключение Font Awesome для иконок -->
@@ -12,8 +12,8 @@
 <body>
     <header>
         <div class="container">
-            <h1>Мой Лендинг</h1>
-            <p>Сайт со ссылками на любимые ресурсы</p>
+            <h1>Weeks</h1>
+            <p>Сайт YouTube канала Weeks</p>
         </div>
     </header>
 
