--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                      <a href="http://t.me/danyl2595" class="panel-item telegram" target="_blank">
                          <i class="fab fa-telegram-plane"></i><span>ПОДВАЛ ДАНУЛА</span>
                      </a>
-                     <a href="https://discord.com" class="panel-item discord" target="_blank">
+                     <a href="https://discord.gg/T4FUrrWaDj" class="panel-item discord" target="_blank">
                         <i class="fab fa-discord"></i><span>ПОДВАЛ ДАНУЛА</span>
                    </a>
                     <a href="https://vk.com/xdanil23" class="panel-item vk" target="_blank">
