--- a/index.html
+++ b/index.html
@@ -31,8 +31,12 @@
                         <i class="fab fa-discord"></i><span>ПОДВАЛ ДАНУЛА</span>
                    </a>
                     <a href="https://vk.com/xdanil23" class="panel-item vk" target="_blank">
-                    <i class="fab fa-vk"></i><span>WEEKS</span>
-                    </a>
+                       <i class="fab fa-vk"></i><span>WEEKS</span>
+                  </a>
+                </a>
+                <a href="indez2.html" class="panel-item streams" target="_blank">
+                  <i class="fas fa-video"></i><span>Стримы</span>
+              </a>
                 </div>
             </div>
         </section>
@@ -58,6 +62,7 @@
     <footer>
         <div class="container">
             <p>&copy; 2019 - 2024 Weeks Chanel</p>
+            <p>v 0.0.2</p>
         </div>
     </footer>
 
