--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <!-- Подключение Font Awesome для иконок -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
+    <!-- Иконка для браузеров -->
+    <link rel="icon" href="img/photo_2024-12-27_23-33-03.jpg" type="image/x-icon">
+
+    <!-- Иконка для Safari на iOS -->
+     <link rel="apple-touch-icon" sizes="180x180" href="img/photo_2024-12-27_23-33-03.jpg">
 <body>
     <header>
         <div class="container">
@@ -37,7 +42,7 @@
                 <a href="indez2.html" class="panel-item streams" target="_blank">
                   <i class="fas fa-video"></i><span>Стримы</span>
               </a>
-                </div>
+
             </div>
         </section>
 
@@ -62,9 +67,11 @@
     <footer>
         <div class="container">
             <p>&copy; 2019 - 2024 Weeks Chanel</p>
-            <p>v 0.0.2</p>
+            <p>v 0.0.3(beta)</p>
         </div>
     </footer>
+    <a href="files/i.webp" download="i.webp" class="download-button">
+        <i class="fas fa-download"></i> Скачать сектет
 
 </body>
 </html>
