--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <p>v 0.0.3(beta)</p>
         </div>
     </footer>
-    <a href="files/i.webp" download="i.webp" class="download-button">
+    <a href="files/1642640790_1-abrakadabra-fun-p-anime-oboi-na-ekran-blokirovki-na-pk-1.jpg" download="1642640790_1-abrakadabra-fun-p-anime-oboi-na-ekran-blokirovki-na-pk-1.jpg" class="download-button">
         <i class="fas fa-download"></i> Скачать сектет
 
 </body>
