--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@
             <div class="container">
                 <h2>Последнии ролики</h2>
                 <div class="image-grid">
+                    <a href="https://youtu.be/KnJKFnYgynM" class="image-link" target="_blank">
+                        <img src="img/Трамп отменяет блокировку ютуб.png" alt="" class="image">
+                   </a>
                      <a href="https://youtu.be/opLuIbIC1-0?si=2tFiVVqvRBwnPJWP" class="image-link" target="_blank">
                         <img src="img/RKN_Bloced_Anime.png" alt="" class="image">
                     </a>
                     <a href="https://youtu.be/yEPvqyQTKhQ?si=38XWvX3lcspIJcuW" class="image-link" target="_blank">
-                         <img src="img/RKN_XZ.png" alt="" class="image">
-                    </a>
-                     <a href="https://youtu.be/28S_bVmm4v4?si=YVVkCZTD1aKJdAvJ" class="image-link" target="_blank">
-                        <img src="img/School_History.png" alt="" class="image">
-                    </a>
+                        <img src="img/RKN_XZ.png" alt="" class="image">
+                   </a>
                 </div>
             </div>
         </section>
@@ -67,11 +67,9 @@
     <footer>
         <div class="container">
             <p>&copy; 2019 - 2024 Weeks Chanel</p>
-            <p>v 0.0.3(beta)</p>
+            <p>v 0.0.3</p>
         </div>
     </footer>
-    <a href="files/1642640790_1-abrakadabra-fun-p-anime-oboi-na-ekran-blokirovki-na-pk-1.jpg" download="1642640790_1-abrakadabra-fun-p-anime-oboi-na-ekran-blokirovki-na-pk-1.jpg" class="download-button">
-        <i class="fas fa-download"></i> Скачать сектет
 
 </body>
 </html>
